src/test/deca/syntax/valid/nonprovided/method_call_without_parameter.deca
/*
    Description : test sur "ident '(' list_expr ')'", avec list_expr vide

    Résultat : OK

*/
{
    x ( );
}
